--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>目次</title>
 </head>
 <body>
-  <div>
+  <!-- <div>
     <h2>サンプル</h2>
     <ul>
       <li><a href="./sample/sample01.html">サンプル1</a></li>
@@ -19,7 +19,7 @@
   <div>
     <h2>提出物</h2>
     <p><a href="./sample/sample01.html">12227025: 瀬永莉子:</a></p>
-  </div>
+  </div> -->
 
 </body>
 </html>
