--- a/sample/sample01.html
+++ b/sample/sample01.html
@@ -21,24 +21,24 @@
         <ul>
           <li>menu1</li>
           <li>menu2</li>
-          <li>menu3</li>
+          <li>menu3</li>xx
         </ul>
       </header>
 
       <div id="contents">
         <div id="back"></div>
-        <div id="person"><img src="./images/person.png" alt=""></div>
-        <div id="car"><img src="./images/car.png" alt=""></div>
-        <div id="food"><img src="./images/food.png" alt=""></div>
-      </div>
+      
+
 
       <footer>
         this is sample
       </footer>
 
       <div id="intro">
-        <p>ここは宇宙</p>
+        <p>post post</p>
       </div>
+
+      
 
 
     </div>
