--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>目次</title>
-</head>
-<body>
-  <!-- <div>
-    <h2>サンプル</h2>
-    <ul>
-      <li><a href="./sample/sample01.html">サンプル1</a></li>
-      <li><a href="./sample/sample02.html">サンプル2</a></li>
-      <li><a href="./sample/sample03.html">サンプル3</a></li>
-      <li><a href="./sample/sample04.html">サンプル4</a></li>
-    </ul>
-  </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <div>
-    <h2>提出物</h2>
-    <p><a href="./sample/sample01.html">12227025: 瀬永莉子:</a></p>
-  </div> -->
+    <!-- jsライブラリ -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/filipelinhares/ress/master/dist/ress.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- 自分のcss -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- 自分のjs -->
+    <script src="./js/script.js"></script>
+    
+    <title>Portfolio | aina tajiri</title>
+  </head>
 
-</body>
+  <body>
+    <div class="wrap">
+
+      <div id="content">
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+      </div>
+      <div id="content">
+        <div class="set"></div>
+        <div class="set"></div>
+        <div class="set"></div>
+      </div>
+
+    </div>
+  </body>
 </html>
