--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Portfolio | aina tajiri</title>
+    <title>Post post</title>
   </head>
 
   <body>
@@ -79,12 +79,8 @@
     <footer>
 
       <ul class="footer-menu">
-          <li>home ｜</li>
-          <li>about ｜</li>
-          <li>service ｜</li>
-          <li>Contact Us</li>
-      </ul>
-      <p>© All rights reserved by webcampnavi.</p>
+      <br>
+      <p>post post</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
