--- a/index.html
+++ b/index.html
@@ -55,26 +55,26 @@
         </div>
 
         <div class="set">
-          <img src="./image/No.1-03.jpg" alt="二枚目">
+          <img src="./image/画像-03.png" alt="二枚目">
         </div>
        
         <div class="set">
-          <img src="./image/No.1-04.jpg" alt="三枚目">
+          <img src="./image/画像-04.png" alt="三枚目">
         </div>
 
       </div>
 
       <div id="content">
         <div class="set">
-          <img src="./image/No.1-05.jpg" alt="四枚目">
+          <img src="./image/画像-05.png" alt="四枚目">
         </div>
 
         <div class="set">
-          <img src="./image/No.1-06.jpg" alt="五枚目">
+          <img src="./image/画像-06.png" alt="五枚目">
         </div>
 
         <div class="set">
-          <img src="./image/IMG_6259.jpg" alt="六枚目">
+          <img src="./image/画像-07.png" alt="六枚目">
         </div>
       </div>
 
