--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br>
         <br>
         これまでとこれからを<br>
-        ここにpostしていきます。<br>
+        ここに<span>post</span>していきます。<br>
         <br>
         <br>
         このサイトの中の人は大変飽き性です。<br>
